Optimized for space complexity

--- a/Python/DynamicProgramming/LCS-Sequence-pattern-matching.ipynb
+++ b/Python/DynamicProgramming/LCS-Sequence-pattern-matching.ipynb
@@ -71,10 +71,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Space optimized code. 1-D dp.\n",
+    "def longestSequencePatternMatching_1D(str1, str2):\n",
+    "    \n",
+    "    n = len(str1)\n",
+    "    m = len(str2)\n",
+    "    \n",
+    "    dp = [0 ] * (m+1)\n",
+    "    \n",
+    "    for s in str1:\n",
+    "        prev = 0\n",
+    "        for j in range(m+1):\n",
+    "            if s == str2[j-1]:\n",
+    "                prev, dp[j] = dp[j], 1 + prev\n",
+    "            else:\n",
+    "                prev, dp[j] = dp[j], max(dp[j], dp[j-1])\n",
+    "    \n",
+    "    return n == dp[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str1 = \"axy\"\n",
+    "str2 = \"adxcpy\"\n",
+    "longestSequencePatternMatching_1D(str1,str2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str1 = \"axye\"\n",
+    "str2 = \"adxcpy\"\n",
+    "longestSequencePatternMatching_1D(str1,str2)"
+   ]
   }
  ],
  "metadata": {
